# pranslator

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  dictionary.rs  favorites.rs  mod.rs  translate.rs
src-tauri/src/config/: favorites.rs  mod.rs  settings.rs
src-tauri/src/dictionary/: downloader.rs  mod.rs  reader.rs
src-tauri/src/llm/: client.rs
src/api/: dictionary.ts  translate.ts
src/components/: FavoritesPanel.tsx  LeaderKeyOverlay.tsx  SettingsPanel.tsx  ShortcutInput.tsx  TranslationPanel.tsx
src/config/: globalShortcuts.ts  shortcuts.ts
src/constants/: animations.ts  index.ts
src/hooks/: useLeaderKey.ts
src/stores/: favorites.ts  settings.ts
src/types/: index.ts
