[package]
name = "pranslator"
version = "0.0.1"
description = "English Assistant Translation App"
authors = ["you"]
edition = "2021"

[lib]
name = "pranslator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
readmdict = "0.1"
zip = "0.6"
futures = "0.3"

[dev-dependencies]
mockito = "1"
